--- a/website-new/style.css
+++ b/website-new/style.css
@@ -243,7 +243,7 @@ img {
 }
 .education{
   align-self: center;
-  align-items: left;
+  align-items: flex-start;
   display: flex;
   flex-direction:  row;
   vertical-align: top;
@@ -258,7 +258,7 @@ img {
 }
 .work{
   align-self: center;
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   flex-direction:  row;
   vertical-align: top;
@@ -389,4 +389,53 @@ img {
   cursor: default;
   color: black;
   height: auto;
+}
+.personal-projects{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  vertical-align: top;
+  padding-top: 5%;
+  cursor: default;
+  color: black;
+  height: auto;
+}
+.personal-projects box{
+  display: flex;
+  flex-direction: row;
+  justify-content: center; /* This will center the items horizontally */
+  align-items: flex-start; /* This will align the items to the top */
+  width: 100%;
+  cursor: default;
+  color: black;
+  height: auto;
+  gap: 2%;
+}
+
+.personal-projects individual{
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* This will center the items horizontally */
+  align-items: flex-start; /* This will align the items to the top */
+  width: 30%;
+  cursor: default;
+  color: black;
+  height: auto;
+}
+.personal-projects sub{
+  font-size: calc(8pt + 0.25vw);
+  color: #666a71;
+  font-weight: normal;
+}
+.personal-projects img{
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+  border-radius: 5%;
+  outline: black;
+  outline-width: 1px;
+  outline-style: solid;
 }
